# python-linux-keyring

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
docs/: api.rst  conf.py  errors.rst  index.rst  install.rst  usage.rst
src/linux_keyring/: __init__.py  _libkeyutils.pyi  _libkeyutils.pyx  _libkeyutils_api.pxd  _libkeyutils_types.pxd  backend.py  libkeyutils.py
tests/: conftest.py  test_backend.py  test_keyutils_integration.py  test_keyutils_unpriv.py  test_symbolic_perms.py  test_wrappers_unit.py
