[build-system]
requires = ["setuptools>=74.1", "wheel", "cython>=3.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "linux-keyring"
version = "0.1.0"
description = "API for using Linux Kernel Keyrings"
readme = "README.md"
license = { text = "LGPL-2.1-only" }
authors = [{ name = "Jeff Mahoney", email = "jeffm@jeffm.io" }]
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU Lesser General Public License v2.1 (LGPLv2.1)",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Cython",
  "Topic :: Security",
]
dependencies = [ "keyring" ]

[project.optional-dependencies]
dev = [
    "mypy",
    "flake8",
    "flake8-pyproject",
    "sphinx",
    "pylint",
    "pytest",
]

[project.entry-points."keyring.backends"]
KernelKeyring = "linux_keyring.backend"

[tool.setuptools]
package-dir = { "" = "src" }
# Typing
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
warn_unused_configs = true
warn_unused_ignores = true
ignore_missing_imports = false
disallow_untyped_defs = true

[tool.pylint.main]
# Treat "src" as a source root for a src/ layout
source-roots = ["src/linux-keyring", "tests"]

# Recurse into packages under the given paths you lint on the CLI
recursive = true

# Tweak as you like
jobs = 0            # auto-detect CPUs
reports = false
ignore = [".venv", "build", "dist"]

disable = ["invalid-name"]
extension-pkg-allow-list = ["linux_keyring._libkeyutils"]
ignore-patterns = ".*\\.pyi"

[tool.pylint.format]
max-line-length = 100

[tool.flake8]
exclude = [".git", "__pycache__", "build"]
max-line-length = 120
ignore = [ "E501", "E241" ]
